--- a/css/mian.css
+++ b/css/mian.css
@@ -1,5 +1,13 @@
+body {
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f5f5f5;
+}
 .main {
-  margin: 20px;
+  margin: 30px;
 }
 .header {
   display: flex;
@@ -10,22 +18,21 @@
   margin-bottom: 50px;
 }
 
-a{
-    text-decoration: none;
-    color: #000;
+a {
+  text-decoration: none;
+  color: #000;
 }
 
 .img-container {
   width: 90%;
   height: 300px;
   background-color: gray;
-  border-radius: 50%; 
+  border-radius: 50%;
   margin: auto;
   position: relative;
   border: 10px solid white;
   outline: 2px solid rgb(215, 211, 211);
 }
-
 
 .product-image {
   width: 100%;
@@ -34,67 +41,143 @@ a{
   border: none;
 }
 
-.img-1{
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background-color: gray;
-    border: 5px solid white;
-    position: absolute;
-    top: 60%;
-    left: -30px;
-    
+.img-1 {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: gray;
+  border: 5px solid white;
+  position: absolute;
+  top: 60%;
+  left: -30px;
 }
-.img-1 img{
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-}
-
-.img-2{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: gray;
-    border: 3px solid white;
-    position: absolute;
-    top: 0;
-    right: 30px;
-    
-}
-.img-2 img{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+.img-1 img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
 }
 
-.img-3{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: gray;
-    border: 3px solid white;
-    position: absolute;
-    bottom: 0;
-    right: 40px;
-    
+.img-2 {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: gray;
+  border: 3px solid white;
+  position: absolute;
+  top: 0;
+  right: 30px;
 }
-.img-3 img{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-}
-
-.text{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
+.img-2 img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
 
-span{
-   
-    text-align: center;
-    margin-left: 40px;
+.img-3 {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: gray;
+  border: 3px solid white;
+  position: absolute;
+  bottom: 0;
+  right: 40px;
+}
+.img-3 img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  flex-direction: column;
+}
+
+span {
+  margin-left: 40px;
+}
+
+p{
+  margin: 0;
+  color: gray;
+  font-weight: 400;
+
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+
+.container {
+  text-align: center;
+  margin-top: 50px;
+  padding: 0 70px ;
+ 
+}
+
+h1 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+p {
+  font-size: 0.9rem;
+  color: #888;
+  margin-bottom: 1.5rem;
+}
+
+.indicator {
+  width: 8px;
+  height: 8px;
+  background-color: #2b7546;
+  border-radius: 50%;
+  margin: 0 auto 1.5rem;
+}
+
+.btn {
+  width: 90%;
+  padding: 1.2rem ;
+  font-size: 1rem;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 0.75rem;
+  margin:5px 20px;
+
+}
+
+.continue {
+  background-color: #2b7546;
+
+}
+.continue a{
+  color: #fff;
+  font-weight: bold;
+}
+
+.signin {
+  background-color: #e0e4e7;
+  font-weight: bold;
+  
+}
+.signin a{
+  color:#2b7546 ;
+}
+
+
+.signin:hover {
+  background-color: #d5d9dd;
+}
+
+.continue:hover {
+  background-color: #276940;
 }
 
