--- a/css/profile.css
+++ b/css/profile.css
@@ -3,18 +3,145 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
-
 .form-container {
   width: 100%;
-  height: 300px;
+  height: 700px;
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 10px;
   box-sizing: border-box;
   padding: 20px 30px;
-  margin-top:300px;
+  margin-top: 20px;
+}
+
+.login-form {
+  margin: 2rem;
+  padding: 2.5rem;
+  background-color: white;
+  border-radius: 8px;
+  width: 100%;
+
+  max-width: 520px;
+}
+
+.form-container {
+  position: relative;
+  z-index: 10;
+}
+
+.form-title {
+  margin-bottom: 0.5rem;
+  text-align: center;
+  font-size: 1.35rem;
+  font-weight: bold;
+}
+
+p{
+  color: gray;
+  margin: 0;
+  font-weight: 300;
+}
+
+.or{
+  text-align: center;
+}
+
+.form-subtext {
+  margin-bottom: 2rem;
+  padding: 0 2rem;
+  text-align: center;
+  color: #999;
+  font-size: 14px;
+  margin-top: 20px;
+}
+
+.register-link {
+  font-weight: bold;
+  color: #3ecc71;
+  text-decoration: none;
+}
+
+.register-link:hover {
+  color: #7263f3;
+}
+
+.form-group {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.form-label {
+  margin-bottom: 0.5rem;
+  color: #000;
+}
+
+.form-input {
+  padding: 0.75rem;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  outline-color: #2ecc71;
+  color: #333;
+}
+
+.toggle-password {
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 22px;
+  opacity: 0.45;
+}
+
+.forgot-password-container {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.forgot-password-link {
+  font-weight: bold;
+  color: #2ecc71;
+  font-size: 14px;
+  text-decoration: none;
+  font-weight: 300;
+}
+
+.forgot-password-link:hover {
+  color: #7263f3;
+}
+
+.login-button {
+  margin-top: 1.5rem;
+  padding: 0.75rem;
+  background-color: #2ecc71;
+  color: white;
+  font-weight: bold;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 100%;
+}
+
+.login-button:hover {
+  background-color: #1abc9c;
+}
+
+.login-button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+.eye{
+  position:absolute;
+  top:-5px;
+  right: 5px;
+  width: 50p;
 }
 
 .title {
@@ -142,4 +269,27 @@
   display: flex;
   align-items: center;
   gap: 20px;
+}
+
+.btn {
+  width: 100%;
+  padding: 1.2rem ;
+  font-size: 1rem;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 0.75rem;
+ margin-top: 30px;
+
+}
+
+.login {
+  background-color: #2b7546;
+  
+}
+
+.login a{
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
 }
